# PicoSynth

./: .gitignore  CMakeLists.txt  LICENSE  ReadMe.md
aud_lib/core/: oscillator.cpp  oscillator.h
aud_lib/waveforms/: sine.cpp  sine.h
src/: main.cpp
src/AudioEngine/: AudioBuffer.cpp  AudioBuffer.h  AudioEngine.cpp  AudioEngine.h  i2s_test.cpp
src/core/: oscillator.cpp  oscillator.h  waveforms.cpp  waveforms.h
